# json-path-benchmarks

./: Cargo.toml
benches/: bench_custom.rs  bench_jsonpath.rs  bench_jsonpath_rs.rs  bench_jsonpath_rust.rs  data.json  get_path.rs  root.rs
